--- a/apps/video-player/package.json
+++ b/apps/video-player/package.json
@@ -20,8 +20,8 @@
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-fade-in": "^2.0.1",
     "sharp": "^0.32.6",
+    "ui": "workspace:*",
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
