--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": "tsconfig/react-library.json",
-  "include": [".", "../../apps/video-player/components/ursor-input-field.js"],
+  "include": ["."],
   "exclude": ["dist", "build", "node_modules"]
 }
