--- a/apps/video-player/vercel.json
+++ b/apps/video-player/vercel.json
@@ -5,7 +5,7 @@
         "destination": "https://www.astrosafe.co/blog"
     },
     {
-        "source": "/blog/:blogid(\\[\\w\\-\\]+)",
+        "source": "/blog/:blogid([a-zA-Z0-9-]+)",
         "destination": "https://www.astrosafe.co/blog/:blogid"
     },  
     {
