--- a/apps/video-player/package.json
+++ b/apps/video-player/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "pnpm run generate-sitemap && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap --config=next-sitemap.config.js",
+    "generate-sitemap": "next-sitemap --config=next-sitemap.config.js"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -18,6 +20,7 @@
     "axios": "^1.6.0",
     "axios-retry": "^3.8.1",
     "next": "14.0.1",
+    "next-sitemap": "^4.2.3",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.32.6",
