--- a/apps/video-player/vercel.json
+++ b/apps/video-player/vercel.json
@@ -2,79 +2,75 @@
   "rewrites": [
     {
         "source": "/video",
-        "destination": "https://www.ursorinternet.com/video"
+        "destination": "https://ursorinternet.com/video"
     },
     {
         "source": "/blog",
-        "destination": "https://www.ursorinternet.com/blog"
+        "destination": "https://ursorinternet.com/blog"
     },
     {
         "source": "/blog/:blogid([a-zA-Z0-9-]+)",
-        "destination": "https://www.ursorinternet.com/blog/:blogid"
+        "destination": "https://ursorinternet.com/blog/:blogid"
     },  
     {
         "source": "/tutorials",
-        "destination": "https://www.ursorinternet.com/tutorials"
+        "destination": "https://ursorinternet.com/tutorials"
     },
     {
         "source": "/tutorials/:tutorialid([a-zA-Z0-9-]+)",
-        "destination": "https://www.ursorinternet.com/tutorials/:tutorialid"
+        "destination": "https://ursorinternet.com/tutorials/:tutorialid"
     },
     {
         "source": "/tools",
-        "destination": "https://www.ursorinternet.com/tools"
+        "destination": "https://ursorinternet.com/tools"
     },
     {
         "source": "/compare",
-        "destination": "https://www.ursorinternet.com/compare"
+        "destination": "https://ursorinternet.com/compare"
     },
     {
         "source": "/about",
-        "destination": "https://www.ursorinternet.com/about"
+        "destination": "https://ursorinternet.com/about"
     },
     {
         "source": "/privacy-policy",
-        "destination": "https://www.ursorinternet.com/privacy-policy"
+        "destination": "https://ursorinternet.com/privacy-policy"
     },
     {
         "source": "/faqs",
-        "destination": "https://www.ursorinternet.com/faqs"
+        "destination": "https://ursorinternet.com/faqs"
     },
     {
         "source": "/terms-and-conditions",
-        "destination": "https://www.ursorinternet.com/terms-and-conditions"
+        "destination": "https://ursorinternet.com/terms-and-conditions"
     },
     {
         "source": "/child-privacy-policy",
-        "destination": "https://www.ursorinternet.com/child-privacy-policy"
+        "destination": "https://ursorinternet.com/child-privacy-policy"
     },
     {
         "source": "/book-demo",
-        "destination": "https://www.ursorinternet.com/book-demo"
-    },
-    {
-        "source": "/sign-up",
-        "destination": "https://www.ursorinternet.com/sign-up"
+        "destination": "https://ursorinternet.com/book-demo"
     },
     {
         "source": "/websites-for-kids",
-        "destination": "https://www.ursorinternet.com/websites-for-kids"
+        "destination": "https://ursorinternet.com/websites-for-kids"
     },
     {
         "source": "/chore-charts-for-kids",
-        "destination": "https://www.ursorinternet.com/chore-charts-for-kids"
+        "destination": "https://ursorinternet.com/chore-charts-for-kids"
     },
     {
         "source": "/15-minutes-meditation-for-family-time-and-kids",
-        "destination": "https://www.ursorinternet.com/15-minutes-meditation-for-family-time-and-kids"
+        "destination": "https://ursorinternet.com/15-minutes-meditation-for-family-time-and-kids"
     },
     { 
         "source": "/",
-        "destination": "https://www.ursorinternet.com/"
+        "destination": "https://ursorinternet.com/"
     },
     { 
         "source": "",
-        "destination": "https://www.ursorinternet.com"
+        "destination": "https://ursorinternet.com"
     }
   ]
 }
