--- a/apps/video-player/vercel.json
+++ b/apps/video-player/vercel.json
@@ -70,7 +70,7 @@
     },
     { 
         "source": "/",
-        "destination": "https://www.ursorinternet.com/"
+        "destination": "https://www.ursorinternet.com"
     },
     { 
         "source": "",
