trying trailing slash

--- a/apps/video-player/vercel.json
+++ b/apps/video-player/vercel.json
@@ -70,11 +70,11 @@
     },
     { 
         "source": "/",
-        "destination": "https://proxy.astrosafe.co"
+        "destination": "https://proxy.astrosafe.co/"
     },
     { 
         "source": "",
-        "destination": "https://proxy.astrosafe.co"
+        "destination": "https://proxy.astrosafe.co/"
     }
   ]
 }
