test if this vercel file is interferring

--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,12 @@
 {
   "rewrites": [
-    {
-      "source": "/blog",
-      "destination": "https://www.astrosafe.co/blog"
-    },
-    {
-      "source": "/tools",
-      "destination": "https://www.astrosafe.co/tools"
-    },
     { 
       "source": "/",
-      "destination": "https://www.astrosafe.co"
+      "destination": "https://www.example.com"
     },
     { 
       "source": "",
-      "destination": "https://www.astrosafe.co"
+      "destination": "https://www.example.com"
     }
   ]
 }
