--- a/apps/video-player/vercel.json
+++ b/apps/video-player/vercel.json
@@ -71,6 +71,10 @@
     { 
         "source": "/",
         "destination": "https://proxy.astrosafe.co"
+    },
+    { 
+        "source": "/",
+        "destination": "https://proxy.astrosafe.co/"
     }
   ]
 }
