--- a/apps/video-player/package.json
+++ b/apps/video-player/package.json
@@ -22,12 +22,14 @@
     "react-dom": "^18",
     "sharp": "^0.32.6",
     "ui": "workspace:*",
-    "usehooks-ts": "^2.9.1"
+    "usehooks-ts": "^2.9.1",
+    "xmldom": "^0.6.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/xmldom": "^0.1.34",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
