--- a/apps/video-player/package.json
+++ b/apps/video-player/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.0",
     "axios-retry": "^3.8.1",
     "next": "14.0.1",
+    "next-svgr": "^0.0.2",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.32.6",
