added video player to rewrites

--- a/apps/video-player/vercel.json
+++ b/apps/video-player/vercel.json
@@ -6,7 +6,7 @@
     },
     {
         "source": "/p/:pediaId([a-zA-Z0-9-]+)",
-        "destination": "astro-monorepo-pedia.vercel.app/p/:pediaId"
+        "destination": "https://astro-monorepo-pedia.vercel.app/p/:pediaId"
     },
     {
         "source": "/blog",
