--- a/apps/pedia/package.json
+++ b/apps/pedia/package.json
@@ -22,6 +22,7 @@
     "next": "14.0.1",
     "next-svgr": "^0.0.2",
     "react": "^18",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-fade-in": "^2.0.1",
     "react-image-size": "^2.3.2",
