--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/system": "^5.14.17"
+    "@mui/material": "^5.14.16",
+    "@mui/system": "^5.14.17",
+    "csstype": "^3.1.3"
   }
 }
