new notif style

--- a/apps/pedia/package.json
+++ b/apps/pedia/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18",
     "react-fade-in": "^2.0.1",
     "react-image-size": "^2.3.2",
+    "react-popper": "^2.3.0",
     "react-tsparticles": "^2.12.2",
     "sharp": "^0.32.6",
     "tsparticles": "^2.0.6",
