--- a/apps/pedia/package.json
+++ b/apps/pedia/package.json
@@ -29,8 +29,10 @@
     "react-fade-in": "^2.0.1",
     "react-image-size": "^2.3.2",
     "react-popper": "^2.3.0",
+    "react-slick": "^0.29.0",
     "react-tsparticles": "^2.12.2",
     "sharp": "^0.32.6",
+    "swiper": "^11.0.5",
     "tsparticles": "^2.0.6",
     "ui": "workspace:*",
     "usehooks-ts": "^2.9.1",
@@ -41,6 +43,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "@types/xmldom": "^0.1.34",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
