--- a/apps/video-player/vercel.json
+++ b/apps/video-player/vercel.json
@@ -5,6 +5,10 @@
         "destination": "https://proxy.astrosafe.co/video"
     },
     {
+        "source": "/pedia",
+        "destination": "https://proxy.astrosafe.co/pedia"
+    },
+    {
         "source": "/p/:pediaId([a-zA-Z0-9-]+)",
         "destination": "https://astro-monorepo-pedia.vercel.app/p/:pediaId"
     },
