--- a/apps/pedia/package.json
+++ b/apps/pedia/package.json
@@ -20,6 +20,7 @@
     "axios-retry": "^3.8.1",
     "lodash": "^4.17.21",
     "lottie-react": "^2.4.0",
+    "moment": "^2.30.1",
     "next": "14.0.4",
     "next-svgr": "^0.0.2",
     "react": "^18",
