--- a/apps/video-player/package.json
+++ b/apps/video-player/package.json
@@ -18,6 +18,7 @@
     "@svgr/webpack": "^8.1.0",
     "axios": "^1.6.0",
     "axios-retry": "^3.8.1",
+    "moment": "^2.30.1",
     "next": "14.0.4",
     "next-svgr": "^0.0.2",
     "react": "^18",
