--- a/apps/video-player/package.json
+++ b/apps/video-player/package.json
@@ -18,17 +18,21 @@
     "@svgr/webpack": "^8.1.0",
     "axios": "^1.6.0",
     "axios-retry": "^3.8.1",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "next": "14.0.4",
     "next-svgr": "^0.0.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-fade-in": "^2.0.1",
+    "react-popper": "^2.3.0",
     "sharp": "^0.32.6",
     "ui": "workspace:*",
     "usehooks-ts": "^2.9.1",
     "xmldom": "^0.6.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
