--- a/apps/video-player/package.json
+++ b/apps/video-player/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.6.0",
     "axios-retry": "^3.8.1",
     "lodash": "^4.17.21",
+    "mixpanel-browser": "^2.48.1",
     "moment": "^2.30.1",
     "next": "14.0.4",
     "next-svgr": "^0.0.2",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.202",
+    "@types/mixpanel-browser": "^2.48.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
