test api solution

--- a/apps/video-player/vercel.json
+++ b/apps/video-player/vercel.json
@@ -1,6 +1,10 @@
 {
   "rewrites": [
     {
+        "source": "/robots.txt",
+        "destination": "/api/robots"
+    },
+    {
         "source": "/video",
         "destination": "https://proxy.astrosafe.co/video"
     },
