--- a/apps/video-player/vercel.json
+++ b/apps/video-player/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
         "source": "/robots.txt",
-        "destination": "/api/robots"
+        "destination": "/robots"
     },
     {
         "source": "/video",
