--- a/apps/stripe-webhook/package.json
+++ b/apps/stripe-webhook/package.json
@@ -1,20 +1,18 @@
 {
   "name": "stripe-webhook",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "A webhook for Astro's subscriptions.",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "prebuild": "rm -rf dist",
-    "build": "node build.js",
-    "postbuild": "cd dist && zip -r handler.zip handler.mjs*"
+    "updateLambda": "zip -r dist.zip index.js package.json node_modules; aws lambda update-function-code --function-name stripe-webhook --zip-file 'fileb://dist.zip'"
   },
-  "type": "module",
   "author": "ASTRO",
   "license": "ISC",
   "dependencies": {
-    "esbuild": "^0.20.0",
     "express": "^4.18.2",
+    "qs": "^6.11.2",
+    "side-channel": "^1.0.5",
     "stripe": "^14.15.0"
   }
 }
