--- a/apps/stripe-webhook/package.json
+++ b/apps/stripe-webhook/package.json
@@ -5,14 +5,16 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "updateLambda": "zip -r dist.zip index.js package.json node_modules; aws lambda update-function-code --function-name stripe-webhook --zip-file 'fileb://dist.zip'"
+    "prebuild": "rm -rf dist; mkdir dist",
+    "build": "esbuild index.js --bundle --minify --outfile=dist/index.js --platform=node",
+    "postbuild": "cd dist && zip -r handler.zip index.js",
+    "updateLambda": "aws lambda update-function-code --function-name stripe-webhook --zip-file 'fileb://dist/handler.zip'"
   },
   "author": "ASTRO",
   "license": "ISC",
   "dependencies": {
+    "esbuild": "^0.20.0",
     "express": "^4.18.2",
-    "qs": "^6.11.2",
-    "side-channel": "^1.0.5",
     "stripe": "^14.15.0"
   }
 }
