--- a/apps/video-player/package.json
+++ b/apps/video-player/package.json
@@ -30,6 +30,7 @@
     "react-image-file-resizer": "^0.4.8",
     "react-image-size": "^2.3.2",
     "react-popper": "^2.3.0",
+    "react-quill": "^2.0.0",
     "sharp": "^0.32.6",
     "ui": "workspace:*",
     "usehooks-ts": "^2.9.1",
