--- a/apps/canvas/package.json
+++ b/apps/canvas/package.json
@@ -31,6 +31,7 @@
     "react-image-size": "^2.3.2",
     "react-popper": "^2.3.0",
     "react-quill": "^2.0.0",
+    "react-slick": "^0.29.0",
     "react-to-print": "^2.15.1",
     "sharp": "^0.32.6",
     "ui": "workspace:*",
@@ -43,6 +44,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "@types/xmldom": "^0.1.34",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
