--- a/apps/canvas/package.json
+++ b/apps/canvas/package.json
@@ -19,6 +19,8 @@
     "@svgr/webpack": "^8.1.0",
     "axios": "^1.6.0",
     "axios-retry": "^3.8.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
     "mixpanel-browser": "^2.48.1",
     "moment": "^2.30.1",
