--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -23,6 +23,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.16",
     "@mui/system": "^5.14.17",
-    "csstype": "^3.1.3"
+    "csstype": "^3.1.3",
+    "google": "link:next/font/google"
   }
 }
