--- a/apps/canvas/package.json
+++ b/apps/canvas/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.16",
     "@mui/system": "^5.14.16",
+    "@next/bundle-analyzer": "^14.1.3",
     "@sentry/react": "^7.77.0",
     "@svgr/webpack": "^8.1.0",
     "axios": "^1.6.0",
