renaming from video to safetube

--- a/apps/video-player/vercel.json
+++ b/apps/video-player/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
         "source": "/video",
-        "destination": "https://proxy.astrosafe.co/video"
+        "destination": "https://proxy.astrosafe.co/tools/safetube"
     },
     {
         "source": "/pedia",
