--- a/apps/canvas/vercel.json
+++ b/apps/canvas/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
         "source": "/video",
-        "destination": "https://proxy.astrosafe.co/tools/video"
+        "destination": "https://proxy.astrosafe.co/tools/safetube"
     }
   ]
 }
