--- a/apps/video-player/vercel.json
+++ b/apps/video-player/vercel.json
@@ -17,8 +17,12 @@
         "destination": "https://canvas.astrosafe.co/worksheet/:worksheetId"
     },
     {
+        "source": "/dashboard",
+        "destination": "https://canvas.astrosafe.co/dashboard"
+    },
+    {
         "source": "/video/:videoId([a-zA-Z0-9-]+)",
-        "destination": "https://canvas.astrosafe.co/worksheet/:videoId"
+        "destination": "https://canvas.astrosafe.co/video/:videoId"
     },
     {
         "source": "/p/:pediaId([a-zA-Z0-9-]+)",
