--- a/apps/video-player/package.json
+++ b/apps/video-player/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.6.0",
     "axios-retry": "^3.8.1",
     "dayjs": "^1.11.10",
+    "get-user-locale": "^2.3.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
