--- a/apps/video-player/package.json
+++ b/apps/video-player/package.json
@@ -23,6 +23,7 @@
     "dayjs": "^1.11.10",
     "get-user-locale": "^2.3.1",
     "html2canvas": "^1.4.1",
+    "is-valid-domain": "^0.1.6",
     "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
     "lottie-react": "^2.4.0",
