--- a/apps/video-player/package.json
+++ b/apps/video-player/package.json
@@ -41,7 +41,9 @@
     "react-quill": "^2.0.0",
     "react-slick": "^0.29.0",
     "react-to-print": "^2.15.1",
+    "react-tsparticles": "^2.12.2",
     "sharp": "^0.32.6",
+    "tsparticles": "^2.0.6",
     "ui": "workspace:*",
     "usehooks-ts": "^2.9.1",
     "xmldom": "^0.6.0"
