--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -22,6 +22,7 @@
     "aws-sdk": "^2.1605.0",
     "axios": "^1.6.0",
     "axios-retry": "^3.8.1",
+    "cookie": "^0.6.0",
     "dayjs": "^1.11.10",
     "get-user-locale": "^2.3.1",
     "html2canvas": "^1.4.1",
@@ -49,6 +50,7 @@
     "xmldom": "^0.6.0"
   },
   "devDependencies": {
+    "@types/cookie": "^0.6.0",
     "@types/lodash": "^4.14.202",
     "@types/mixpanel-browser": "^2.48.1",
     "@types/node": "^20",
