adding hotjar to dev

--- a/apps/video-player/package.json
+++ b/apps/video-player/package.json
@@ -13,6 +13,7 @@
     "@dnd-kit/core": "^6.1.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hotjar/browser": "^1.0.9",
     "@mui/material": "^5.14.16",
     "@mui/system": "^5.14.16",
     "@next/bundle-analyzer": "^14.1.3",
