--- a/apps/video-player/package.json
+++ b/apps/video-player/package.json
@@ -19,6 +19,8 @@
     "@next/bundle-analyzer": "^14.1.3",
     "@sentry/react": "^7.77.0",
     "@svgr/webpack": "^8.1.0",
+    "Check": "link:@mui/icons-material/Check",
+    "DoDisturb": "link:@mui/icons-material/DoDisturb",
     "axios": "^1.6.0",
     "axios-retry": "^3.8.1",
     "dayjs": "^1.11.10",
