--- a/apps/aw/package.json
+++ b/apps/aw/package.json
@@ -19,6 +19,7 @@
     "@svgr/webpack": "^8.1.0",
     "axios": "^1.6.0",
     "axios-retry": "^3.8.1",
+    "country-codes-list": "^1.6.11",
     "dayjs": "^1.11.10",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
