--- a/apps/video-player/package.json
+++ b/apps/video-player/package.json
@@ -35,6 +35,7 @@
     "next-intl": "^3.9.5",
     "next-svgr": "^0.0.2",
     "react": "^18",
+    "react-calendar": "^5.0.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-fade-in": "^2.0.1",
