--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@next/bundle-analyzer": "^14.1.3",
     "@sentry/react": "^7.77.0",
     "@svgr/webpack": "^8.1.0",
+    "@turbo/gen": "^2.0.14",
     "Check": "link:@mui/icons-material/Check",
     "DoDisturb": "link:@mui/icons-material/DoDisturb",
     "axios": "^1.6.0",
@@ -53,6 +54,7 @@
     "xmldom": "^0.6.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.14.202",
     "@types/mixpanel-browser": "^2.48.1",
     "@types/node": "^20",
