--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,12 @@
 {
   "name": "astro-parent-portal",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "scripts": {
+    "build": "microbundle",
+    "dev": "microbundle watch"
+  },
+  "type": "module",
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
     "@emotion/react": "^11.11.1",
@@ -18,6 +23,7 @@
     "axios": "^1.6.0",
     "axios-retry": "^3.8.1",
     "dayjs": "^1.11.10",
+    "dotenv": "^16.4.5",
     "get-user-locale": "^2.3.1",
     "html2canvas": "^1.4.1",
     "is-valid-domain": "^0.1.6",
@@ -59,8 +65,12 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
+    "microbundle": "^0.15.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
-  }
+    "typescript": "^5.5.4"
+  },
+  "description": "Astrosafe parent portal component library",
+  "main": "index.ts",
+  "license": "MIT"
 }
