--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
-  "name": "astro-parent-portal",
-  "version": "0.1.0",
+  "name": "test-sfdagag-da-bleh",
+  "version": "0.2.0",
   "private": false,
+  "outDir": "./dist",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "include": [
+    "src/index.ts"
+  ],
   "scripts": {
-    "build": "tsup"
+    "build": "tsc"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
@@ -46,6 +52,7 @@
     "react-to-print": "^2.15.1",
     "react-tsparticles": "^2.12.2",
     "sharp": "^0.32.6",
+    "test-sfdagag-da-bleh": "^0.1.0",
     "tsparticles": "^2.0.6",
     "ui": "workspace:*",
     "usehooks-ts": "^2.16.0",
@@ -65,16 +72,8 @@
     "eslint-config-next": "14.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "tsup": "^8.2.4",
     "typescript": "^5.5.4"
   },
   "description": "Astrosafe parent portal component library",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
-  "type": "module",
   "license": "MIT"
 }
