--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test-sfdagag-da-bleh",
-  "version": "0.7.0",
+  "version": "0.8.0",
   "private": false,
   "main": "dist/index.js",
   "files": [
@@ -13,7 +13,7 @@
     }
   },
   "scripts": {
-    "build": "tsc"
+    "build": "tsc --declaration"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
