--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "test-sfdagag-da-bleh",
-  "version": "0.8.0",
+  "version": "0.9.0",
   "private": false,
   "main": "dist/index.js",
+  "types": "index.d.ts",
   "files": [
     "dist"
   ],
