--- a/package.json
+++ b/package.json
@@ -1,17 +1,12 @@
 {
   "name": "test-sfdagag-da-bleh",
-  "version": "0.14.0",
+  "version": "0.15.0",
   "private": false,
-  "main": "dist/index.js",
+  "main": "lib/index.js",
+  "types": "index.d.ts",
   "files": [
-    "dist"
+    "lib/**/*"
   ],
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "default": "./dist/index.js"
-    }
-  },
   "scripts": {
     "build": "tsc"
   },
@@ -73,6 +68,7 @@
     "@types/react-slick": "^0.23.13",
     "@types/xmldom": "^0.1.34",
     "autoprefixer": "^10.0.1",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
     "postcss": "^8",
