--- a/package.json
+++ b/package.json
@@ -1,19 +1,13 @@
 {
   "name": "test-sfdagag-da-bleh",
-  "version": "0.15.0",
+  "version": "0.16.0",
   "private": false,
-  "main": "lib/index.js",
-  "types": "index.d.ts",
-  "files": [
-    "lib/**/*"
-  ],
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "rollup -c --bundleConfigAsCjs"
   },
-  "moduleDirectories": [
-    "node_modules",
-    "src"
-  ],
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
     "@emotion/react": "^11.11.1",
@@ -22,6 +16,10 @@
     "@mui/material": "^5.14.16",
     "@mui/system": "^5.14.16",
     "@next/bundle-analyzer": "^14.1.3",
+    "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@sentry/react": "^7.77.0",
     "@svgr/webpack": "^8.1.0",
     "@turbo/gen": "^2.0.14",
@@ -52,6 +50,9 @@
     "react-slick": "^0.29.0",
     "react-to-print": "^2.15.1",
     "react-tsparticles": "^2.12.2",
+    "rollup": "^4.21.1",
+    "rollup-plugin-dts": "^6.1.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
     "sharp": "^0.32.6",
     "test-sfdagag-da-bleh": "^0.1.0",
     "tsparticles": "^2.0.6",
@@ -72,6 +73,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
     "postcss": "^8",
+    "rollup-plugin-postcss": "^4.0.2",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.5.4"
   },
