--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "test-sfdagag-da-bleh",
-  "version": "0.17.0",
+  "version": "0.18.0",
   "private": false,
   "main": "dist/index.js",
-  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "rollup -c --bundleConfigAsCjs"
+    "build": "tsc && resolve-tspaths"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
@@ -73,6 +75,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
     "postcss": "^8",
+    "resolve-tspaths": "^0.8.19",
     "rollup-plugin-postcss": "^4.0.2",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.5.4"
