--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test-sfdagag-da-bleh",
-  "version": "0.19.0",
+  "version": "0.20.0",
   "private": false,
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -8,7 +8,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc && resolve-tspaths"
+    "build": "tsc && resolve-tspaths && cp -r src/images dist"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
