--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test-sfdagag-da-bleh",
-  "version": "0.45.0",
+  "version": "0.46.0",
   "private": false,
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -8,7 +8,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc && resolve-tspaths && yarn copy-static-assets",
+    "build": "webpack --mode production",
     "copy-static-assets": "cp -r src/images dist && cp src/globals.css src/favicon.ico src/README.md dist"
   },
   "dependencies": {
@@ -28,6 +28,7 @@
     "@turbo/gen": "^2.0.14",
     "axios": "^1.6.0",
     "axios-retry": "^3.8.1",
+    "copyfiles": "^2.4.1",
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
     "get-user-locale": "^2.3.1",
@@ -73,13 +74,19 @@
     "@types/xmldom": "^0.1.34",
     "autoprefixer": "^10.0.1",
     "babel-plugin-module-resolver": "^5.0.2",
+    "css-loader": "^7.1.2",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
+    "file-loader": "^6.2.0",
     "postcss": "^8",
     "resolve-tspaths": "^0.8.19",
     "rollup-plugin-postcss": "^4.0.2",
+    "style-loader": "^4.0.0",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5.5.4"
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.5.4",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4"
   },
   "description": "Astrosafe parent portal component library",
   "license": "MIT"
