--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test-sfdagag-da-bleh",
-  "version": "0.60.0",
+  "version": "0.61.0",
   "private": false,
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -8,7 +8,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "webpack --mode production",
+    "build": "webpack",
     "copy-static-assets": "cp -r src/images dist && cp src/globals.css src/favicon.ico src/README.md dist"
   },
   "dependencies": {
@@ -58,7 +58,9 @@
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "sharp": "^0.32.6",
+    "terser-webpack-plugin": "^5.3.10",
     "test-sfdagag-da-bleh": "^0.1.0",
+    "tsconfig-paths-webpack-plugin": "^4.1.0",
     "tsparticles": "^2.0.6",
     "usehooks-ts": "^2.16.0",
     "xmldom": "^0.6.0"
@@ -74,6 +76,7 @@
     "@types/xmldom": "^0.1.34",
     "autoprefixer": "^10.0.1",
     "babel-plugin-module-resolver": "^5.0.2",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^7.1.2",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
