--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test-sfdagag-da-bleh",
-  "version": "0.75.0",
+  "version": "0.76.0",
   "private": false,
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -9,6 +9,7 @@
   ],
   "scripts": {
     "build": "webpack",
+    "start": "webpack serve",
     "copy-static-assets": "cp -r src/images dist && cp src/globals.css src/favicon.ico src/README.md dist"
   },
   "dependencies": {
@@ -84,7 +85,8 @@
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5.5.4",
     "webpack": "^5.94.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   },
   "description": "Astrosafe parent portal component library",
   "license": "MIT"
