--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "test-sfdagag-da-bleh",
-  "version": "0.79.0",
+  "name": "astro-parent-portal-test",
+  "version": "0.1.0",
   "private": false,
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -51,11 +51,7 @@
     "react-slick": "^0.29.0",
     "react-to-print": "^2.15.1",
     "react-tsparticles": "^2.12.2",
-    "rollup": "^4.21.1",
-    "rollup-plugin-dts": "^6.1.1",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
     "sharp": "^0.32.6",
-    "test-sfdagag-da-bleh": "^0.1.0",
     "tsparticles": "^2.0.6",
     "usehooks-ts": "^2.16.0",
     "xmldom": "^0.6.0"
@@ -78,7 +74,6 @@
     "file-loader": "^6.2.0",
     "postcss": "^8",
     "resolve-tspaths": "^0.8.19",
-    "rollup-plugin-postcss": "^4.0.2",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.3.0",
     "ts-loader": "^9.5.1",
