--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "astro-parent-portal-test",
   "version": "0.1.0",
   "private": false,
-  "main": "dist/index.js",
+  "main": "dist/csj/index.js",
+  "module": "dist/esm/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "webpack",
-    "start": "webpack serve",
+    "build": "rollup -c",
     "copy-static-assets": "cp -r src/images dist && cp src/globals.css src/favicon.ico src/README.md dist"
   },
   "dependencies": {
@@ -51,6 +51,7 @@
     "react-slick": "^0.29.0",
     "react-to-print": "^2.15.1",
     "react-tsparticles": "^2.12.2",
+    "rollup": "^4.21.1",
     "sharp": "^0.32.6",
     "tsparticles": "^2.0.6",
     "usehooks-ts": "^2.16.0",
@@ -74,10 +75,14 @@
     "file-loader": "^6.2.0",
     "postcss": "^8",
     "resolve-tspaths": "^0.8.19",
+    "rollup-plugin-dts": "^6.1.1",
+    "rollup-plugin-img": "^1.1.0",
+    "rollup-plugin-import-css": "^3.5.1",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.3.0",
     "ts-loader": "^9.5.1",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
+    "tslib": "^2.7.0",
     "typescript": "^5.5.4",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
