--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "xmldom": "^0.6.0"
   },
   "devDependencies": {
+    "@rollup/plugin-url": "^8.0.2",
     "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.14.202",
     "@types/mixpanel-browser": "^2.48.1",
@@ -76,6 +77,7 @@
     "postcss": "^8",
     "resolve-tspaths": "^0.8.19",
     "rollup-plugin-dts": "^6.1.1",
+    "rollup-plugin-image": "^1.0.2",
     "rollup-plugin-img": "^1.1.0",
     "rollup-plugin-import-css": "^3.5.1",
     "style-loader": "^4.0.0",
