--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/system": "^5.14.16",
     "@next/bundle-analyzer": "^14.1.3",
     "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-image": "^3.0.3",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
@@ -76,6 +77,7 @@
     "file-loader": "^6.2.0",
     "postcss": "^8",
     "resolve-tspaths": "^0.8.19",
+    "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-image": "^1.0.2",
     "rollup-plugin-img": "^1.1.0",
