--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "astro-parent-components",
-  "version": "0.6.0",
+  "version": "0.7.0",
   "private": false,
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -24,6 +24,7 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
+    "astro-parent-components": "^0.6.0",
     "axios": "^1.6.0",
     "axios-retry": "^3.8.1",
     "dayjs": "^1.11.10",
